# FreeRTOS-Cellular-Interface

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  MISRA.md  README.md  cellularInterfaceFilePaths.cmake  lexicon.txt  manifest.yml  sbom.spdx  test.txt
test/: CMakeLists.txt
test/cbmc/include/: cellular_cbmc_state.h  cellular_config.h  cellular_platform.h
test/cbmc/proofs/: Makefile-project-defines  cbmc_build.sh  cbmc_clean.sh
test/cbmc/proofs/Cellular_ATGetNextTok/: Cellular_ATGetNextTok_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATGetSpecificNextTok/: Cellular_ATGetSpecificNextTok_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATHexStrToHex/: Cellular_ATHexStrToHex_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATIsPrefixPresent/: Cellular_ATIsPrefixPresent_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATIsStrDigit/: Cellular_ATIsStrDigit_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATRemoveAllDoubleQuote/: Cellular_ATRemoveAllDoubleQuote_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATRemoveAllWhiteSpaces/: Cellular_ATRemoveAllWhiteSpaces_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATRemoveLeadingWhiteSpaces/: Cellular_ATRemoveLeadingWhiteSpaces_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATRemoveOutermostDoubleQuote/: Cellular_ATRemoveOutermostDoubleQuote_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATRemovePrefix/: Cellular_ATRemovePrefix_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATRemoveTrailingWhiteSpaces/: Cellular_ATRemoveTrailingWhiteSpaces_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATStrDup/: Cellular_ATStrDup_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATStrStartWith/: Cellular_ATStrStartWith_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATStrtoi/: Cellular_ATStrtoi_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_ATcheckErrorCode/: Cellular_ATcheckErrorCode_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonATCommandRaw/: Cellular_CommonATCommandRaw_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonCleanup/: Cellular_CommonCleanup_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonCreateSocket/: Cellular_CommonCreateSocket_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonGetEidrxSettings/: Cellular_CommonGetEidrxSettings_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonGetIPAddress/: Cellular_CommonGetIPAddress_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonGetModemInfo/: Cellular_CommonGetModemInfo_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonGetNetworkTime/: Cellular_CommonGetNetworkTime_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonGetPsmSettings/: Cellular_CommonGetPsmSettings_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonGetRegisteredNetwork/: Cellular_CommonGetRegisteredNetwork_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonGetServiceStatus/: Cellular_CommonGetServiceStatus_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonGetSimCardInfo/: Cellular_CommonGetSimCardInfo_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonGetSimCardLockStatus/: Cellular_CommonGetSimCardLockStatus_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonInit/: Cellular_CommonInit_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonRegisterModemEventCallback/: Cellular_CommonRegisterModemEventCallback_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonRegisterUrcGenericCallback/: Cellular_CommonRegisterUrcGenericCallback_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonRegisterUrcNetworkRegistrationEventCallback/: Cellular_CommonRegisterUrcNetworkRegistrationEventCallback_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonRegisterUrcPdnEventCallback/: Cellular_CommonRegisterUrcPdnEventCallback_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonRegisterUrcSignalStrengthChangedCallback/: Cellular_CommonRegisterUrcSignalStrengthChangedCallback_harness.c  Makefile  README.md  cbmc-viewer.json
test/cbmc/proofs/Cellular_CommonRfOff/: Cellular_CommonRfOff_harness.c  Makefile  (+2 more)
test/cbmc/sources/: cellular_cbmc_state.c  cellular_modules.c  cellular_platform.c  global_state_cellular.c
test/cbmc/stubs/: bsearch.c  memchr.c  snprintf.c  strchr.c  strncpy.c  strnlen.c  strstr.c  strtok.c  strtol.c
test/coverity/: cellular_platform.h
test/unit-test/: CMakeLists.txt  cellular_3gpp_api_utest.c  cellular_3gpp_urc_handler_utest.c  cellular_at_core_utest.c  cellular_common_api_utest.c  cellular_common_utest.c  cellular_config.h  cellular_pkthandler_custom_config_utest.c  cellular_pkthandler_utest.c  cellular_pktio_utest.c  cellular_platform.h
test/unit-test/logging/: logging_levels.h  logging_stack.h
(+864 files in other folders)
